[package]
name = "oauthx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.31"
serde_yaml = "0.9"
colored = "2.0.0"
rand = "0.8.5"
open = "5.3.0"
warp = "0.3"
url = "2.5.2"
