[package]
name = "oauthx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
futures-util = "0.3.31"
handlebars = "6.1.0"
serde_yaml = "0.9"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
colored = "2.0.0"
mime = "0.3.17"
rand = "0.8.5"
open = "5.3.0"
warp = "0.3"
url = "2.5.2"
